Fixed th-alignment

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -120,10 +120,13 @@ input.cities {
   font-weight: bold;
 }
 
-.searchResultHeader th {
+.searchResultHeader {
      cursor: pointer;
      text-align: left;
+     padding: 0;
      padding-right: 1em;
+     padding-left:0.1em;
+
 }
 
 td {
@@ -314,6 +317,7 @@ border: 1px solid #000000;
 table{
   border-collapse: collapse;
   max-width: 900px;
+  text-align: left;
 }
 
 .segment{
@@ -325,6 +329,5 @@ table{
 }
 
 ::placeholder {
-  /* color: #EE0000; red */
   	color: #666666;
 }
